--- a/src/Piwicms/System/UserBundle/Resources/translations/messages.nl.yml
+++ b/src/Piwicms/System/UserBundle/Resources/translations/messages.nl.yml
@@ -23,3 +23,6 @@ userbundle:
             title: Wijzig groep
         new:
             title: Nieuwe groep
+    profile:
+        edit:
+            title: Wijzig profiel
