Deleted old newsletterbundle and restarted and added datafixtures for default user and group

--- a/src/Piwicms/Client/NewsletterBundle/Resources/translations/messages.en.yml
+++ b/src/Piwicms/Client/NewsletterBundle/Resources/translations/messages.en.yml
@@ -1,8 +1,8 @@
 client:
     newsletterbundle:
         newsletter:
-            subscribe:
-            unsubscribe:
+            subscribe: Subscribe
+            unsubscribe: Unsubsribe
         form:
             firstname: Firstname
             surname: Surname
